@@ -1,5 +1,11 @@
 Changes with Apache 2.0.14
 
+  *) Mod_include should always unset the content-length if the file is
+     going to be passed through send_parsed_content.  There is no to
+     determine if the content will change before actually scanning the
+     entire content.  It is far safer to just remove the C-L as long
+     as we are scanning it.  [Ryan Bloom]
+
   *) Fix content-length computation.  We ONLY compute a content-length if
      We are not in a 1.1 request and we cannot chunk, and this is a keepalive
      or we already have all the data.  [Ryan Bloom]
